@@ -46,6 +46,8 @@ import org.slf4j.Logger;
 
 import java.io.IOException;
 import java.util.ArrayDeque;
+import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
@@ -117,6 +119,13 @@ public class NetworkClientDelegate implements AutoCloseable {
      */
     public boolean isUnavailable(Node node) {
         return NetworkClientUtils.isUnavailable(client, node, time);
+    }
+
+    /**
+     * Return the remaining connection delay, including the client's exponential reconnect backoff.
+     */
+    public long connectionDelay(Node node, long currentTimeMs) {
+        return client.connectionDelay(node, currentTimeMs);
     }
 
     /**
@@ -307,8 +316,9 @@ public class NetworkClientDelegate implements AutoCloseable {
 
     public long addAll(PollResult pollResult) {
         Objects.requireNonNull(pollResult);
-        addAll(pollResult.unsentRequests);
-        return pollResult.timeUntilNextPollMs;
+        for (NetworkCommand command : pollResult.networkCommands())
+            add(command.transportRequest());
+        return pollResult.nextPollCondition().delayMs();
     }
 
     public void addAll(final List<UnsentRequest> requests) {
@@ -328,12 +338,82 @@ public class NetworkClientDelegate implements AutoCloseable {
     public static class PollResult {
         public static final long WAIT_FOREVER = Long.MAX_VALUE;
         public static final PollResult EMPTY = new PollResult(WAIT_FOREVER);
+        /** Compatibility projection for manager producers that still return a numeric delay. */
         public final long timeUntilNextPollMs;
+        /** Compatibility projection for manager producers and tests that still use the transport implementation. */
         public final List<UnsentRequest> unsentRequests;
+        private final List<NetworkCommand> networkCommands;
+        private final NextPollCondition nextPollCondition;
+        private final List<ManagerEvent> managerEvents;
 
         public PollResult(final long timeUntilNextPollMs, final List<UnsentRequest> unsentRequests) {
-            this.timeUntilNextPollMs = timeUntilNextPollMs;
-            this.unsentRequests = Collections.unmodifiableList(unsentRequests);
+            this(
+                List.copyOf(unsentRequests),
+                List.of(),
+                NextPollCondition.fromLegacyDelay(timeUntilNextPollMs)
+            );
+        }
+
+        private PollResult(final List<? extends NetworkCommand> networkCommands,
+                           final List<ManagerEvent> managerEvents,
+                           final NextPollCondition nextPollCondition) {
+            this.networkCommands = List.copyOf(networkCommands);
+            this.unsentRequests = compatibilityRequests(this.networkCommands);
+            this.managerEvents = List.copyOf(managerEvents);
+            this.nextPollCondition = Objects.requireNonNull(nextPollCondition, "Next-poll condition must be non-null");
+            this.timeUntilNextPollMs = nextPollCondition.delayMs();
+        }
+
+        private static List<UnsentRequest> compatibilityRequests(final List<NetworkCommand> networkCommands) {
+            List<UnsentRequest> requests = new ArrayList<>(networkCommands.size());
+            for (NetworkCommand command : networkCommands) {
+                UnsentRequest request = command instanceof UnsentRequest
+                    ? (UnsentRequest) command
+                    : command.transportRequest();
+                requests.add(Objects.requireNonNull(request, "Transport request must be non-null"));
+            }
+            return List.copyOf(requests);
+        }
+
+        /**
+         * Target result factory: facts, transport intents, and the next local poll condition are independent,
+         * typed categories.
+         */
+        static PollResult progress(final List<? extends NetworkCommand> networkCommands,
+                                   final List<ManagerEvent> managerEvents,
+                                   final NextPollCondition nextPollCondition) {
+            Objects.requireNonNull(networkCommands, "Network commands must be non-null");
+            Objects.requireNonNull(managerEvents, "Manager events must be non-null");
+            Objects.requireNonNull(nextPollCondition, "Next-poll condition must be non-null");
+            if (networkCommands.isEmpty() && managerEvents.isEmpty())
+                throw new IllegalArgumentException("Progress requires a network command or manager event");
+            return new PollResult(networkCommands, managerEvents, nextPollCondition);
+        }
+
+        /** Reports no progress and a non-negative time-driven delay before the manager should be polled again. */
+        static PollResult retryAfter(final long delayMs) {
+            return new PollResult(List.of(), List.of(), NextPollCondition.retryAfter(delayMs));
+        }
+
+        /** Reports no progress and no timer deadline; another input must make the manager runnable again. */
+        static PollResult awaitInput() {
+            return new PollResult(List.of(), List.of(), NextPollCondition.awaitInput());
+        }
+
+        /**
+         * Reports no progress and names the existing input path expected to make the manager worth evaluating again.
+         * The cause is diagnostic context; it does not register a callback or introduce another wakeup channel.
+         */
+        static PollResult awaitInput(final NextPollCondition.AwaitCause cause) {
+            return new PollResult(List.of(), List.of(), NextPollCondition.awaitInput(cause));
+        }
+
+        /** Reports no progress using an already-derived finite or input-driven activation condition. */
+        static PollResult waitFor(final NextPollCondition condition) {
+            Objects.requireNonNull(condition, "Wait condition must be non-null");
+            if (condition instanceof NextPollCondition.PollImmediately)
+                throw new IllegalArgumentException("No-progress result cannot request an immediate poll");
+            return new PollResult(List.of(), List.of(), condition);
         }
 
         public PollResult(final List<UnsentRequest> unsentRequests) {
@@ -347,9 +427,39 @@ public class NetworkClientDelegate implements AutoCloseable {
         public PollResult(final long timeUntilNextPollMs) {
             this(timeUntilNextPollMs, Collections.emptyList());
         }
+
+        List<NetworkCommand> networkCommands() {
+            return networkCommands;
+        }
+
+        List<ManagerEvent> managerEvents() {
+            return managerEvents;
+        }
+
+        NextPollCondition nextPollCondition() {
+            return nextPollCondition;
+        }
+
+        /** Generic invariant used by the reactor while legacy constructor call sites are migrated incrementally. */
+        boolean isValidPollResult() {
+            return timeUntilNextPollMs >= 0L
+                && (!unsentRequests.isEmpty()
+                    || !managerEvents.isEmpty()
+                    || !(nextPollCondition instanceof NextPollCondition.PollImmediately));
+        }
+
+        PollResult withManagerEvents(final Collection<ManagerEvent> additionalEvents) {
+            if (additionalEvents.isEmpty())
+                return this;
+
+            List<ManagerEvent> combinedEvents = new ArrayList<>(managerEvents.size() + additionalEvents.size());
+            combinedEvents.addAll(managerEvents);
+            combinedEvents.addAll(additionalEvents);
+            return new PollResult(networkCommands, combinedEvents, nextPollCondition);
+        }
     }
 
-    public static class UnsentRequest {
+    public static class UnsentRequest extends NetworkCommand {
         private final AbstractRequest.Builder<?> requestBuilder;
         private final FutureCompletionHandler handler;
         private final Optional<Node> node; // empty if random node can be chosen
@@ -397,6 +507,16 @@ public class NetworkClientDelegate implements AutoCloseable {
 
         UnsentRequest whenComplete(BiConsumer<ClientResponse, Throwable> callback) {
             handler.future().whenComplete(callback);
+            return this;
+        }
+
+        @Override
+        public void onCompletion(final BiConsumer<ClientResponse, Throwable> callback) {
+            handler.future().whenComplete(callback);
+        }
+
+        @Override
+        public UnsentRequest transportRequest() {
             return this;
         }
 
