@@ -17,6 +17,7 @@
 package org.apache.kafka.clients.consumer.internals;
 
 import org.apache.kafka.clients.ClientResponse;
+import org.apache.kafka.common.errors.DisconnectException;
 import org.apache.kafka.common.errors.RetriableException;
 import org.apache.kafka.common.message.StreamsGroupTopologyDescriptionUpdateRequestData;
 import org.apache.kafka.common.protocol.Errors;
@@ -28,6 +29,7 @@ import org.apache.kafka.common.utils.internals.LogContext;
 import org.slf4j.Logger;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 
 public class StreamsGroupTopologyDescriptionRequestManager implements RequestManager {
@@ -38,6 +40,8 @@ public class StreamsGroupTopologyDescriptionRequestManager implements RequestMan
     private final StreamsRebalanceData streamsRebalanceData;
     private final CoordinatorRequestManager coordinatorRequestManager;
     private final RequestState pushRequestState;
+    /** Cross-manager facts completed by topology callbacks and published atomically by the next poll. */
+    private final PendingManagerEvents pendingManagerEvents = new PendingManagerEvents();
 
     private long nextPushTimeMs = 0L;
 
@@ -62,8 +66,9 @@ public class StreamsGroupTopologyDescriptionRequestManager implements RequestMan
 
     @Override
     public NetworkClientDelegate.PollResult poll(final long currentTimeMs) {
-        if (!shouldSendTopologyDescriptionUpdate(currentTimeMs)) {
-            return NetworkClientDelegate.PollResult.EMPTY;
+        final CoordinatorSnapshot coordinatorSnapshot = coordinatorRequestManager.coordinatorSnapshot();
+        if (!shouldSendTopologyDescriptionUpdate(currentTimeMs, coordinatorSnapshot)) {
+            return pendingManagerEvents.publishWith(nextPollResult(currentTimeMs, coordinatorSnapshot));
         }
 
         final StreamsGroupTopologyDescriptionUpdateRequestData data = new StreamsGroupTopologyDescriptionUpdateRequestData()
@@ -76,12 +81,35 @@ public class StreamsGroupTopologyDescriptionRequestManager implements RequestMan
 
         final NetworkClientDelegate.UnsentRequest unsent = new NetworkClientDelegate.UnsentRequest(
             new StreamsGroupTopologyDescriptionUpdateRequest.Builder(data),
-            coordinatorRequestManager.coordinator()
+            coordinatorSnapshot.coordinator()
         );
-        unsent.whenComplete((response, exception) -> onResponse(response, exception));
+        unsent.whenComplete((response, exception) ->
+            onResponse(response, exception, coordinatorSnapshot.version()));
 
         pushRequestState.onSendAttempt(currentTimeMs);
-        return new NetworkClientDelegate.PollResult(Collections.singletonList(unsent));
+        return pendingManagerEvents.publishWith(NetworkClientDelegate.PollResult.progress(
+            Collections.singletonList(unsent),
+            List.of(),
+            NextPollCondition.awaitInput(NextPollCondition.AwaitCause.NETWORK_COMPLETION)));
+    }
+
+    private NetworkClientDelegate.PollResult nextPollResult(final long currentTimeMs,
+                                                            final CoordinatorSnapshot coordinatorSnapshot) {
+        if (pushRequestState.requestInFlight()) {
+            return NetworkClientDelegate.PollResult.awaitInput(NextPollCondition.AwaitCause.NETWORK_COMPLETION);
+        }
+
+        final long backoffRemainingMs = pushRequestState.remainingBackoffMs(currentTimeMs);
+        final long throttleRemainingMs = Math.max(0L, nextPushTimeMs - currentTimeMs);
+        final long delayMs = Math.max(backoffRemainingMs, throttleRemainingMs);
+        if (delayMs > 0L) {
+            return NetworkClientDelegate.PollResult.retryAfter(delayMs);
+        }
+
+        if (coordinatorSnapshot.coordinator().isEmpty()) {
+            return NetworkClientDelegate.PollResult.awaitInput(NextPollCondition.AwaitCause.COORDINATOR_CHANGE);
+        }
+        return NetworkClientDelegate.PollResult.awaitInput(NextPollCondition.AwaitCause.MEMBERSHIP_CHANGE);
     }
 
     @Override
@@ -95,10 +123,23 @@ public class StreamsGroupTopologyDescriptionRequestManager implements RequestMan
         if (waitMs > 0L) {
             return waitMs;
         }
-        return shouldSendTopologyDescriptionUpdate(currentTimeMs) ? 0L : Long.MAX_VALUE;
+        return shouldSendTopologyDescriptionUpdate(currentTimeMs, coordinatorRequestManager.coordinatorSnapshot())
+            ? 0L
+            : Long.MAX_VALUE;
     }
 
-    private boolean shouldSendTopologyDescriptionUpdate(final long currentTimeMs) {
+    @Override
+    public boolean usesLegacyApplicationWait() {
+        return true;
+    }
+
+    @Override
+    public List<ManagerEvent> drainPendingManagerEvents() {
+        return pendingManagerEvents.drain();
+    }
+
+    private boolean shouldSendTopologyDescriptionUpdate(final long currentTimeMs,
+                                                        final CoordinatorSnapshot coordinatorSnapshot) {
         if (!pushRequestState.canSendRequest(currentTimeMs) || currentTimeMs < nextPushTimeMs) {
             return false;
         }
@@ -109,16 +150,21 @@ public class StreamsGroupTopologyDescriptionRequestManager implements RequestMan
         if (memberId == null || memberId.isEmpty()) {
             return false;
         }
-        return coordinatorRequestManager.coordinator().isPresent();
+        return coordinatorSnapshot.coordinator().isPresent();
     }
 
-    private void onResponse(final ClientResponse response, final Throwable exception) {
+    private void onResponse(final ClientResponse response,
+                            final Throwable exception,
+                            final long coordinatorVersion) {
         final long responseTimeMs = time.milliseconds();
 
         if (exception != null) {
             if (exception instanceof RetriableException) {
                 pushRequestState.onFailedAttempt(responseTimeMs);
-                coordinatorRequestManager.handleCoordinatorDisconnect(exception, responseTimeMs);
+                if (exception instanceof DisconnectException) {
+                    pendingManagerEvents.add(new ManagerEvent.CoordinatorUnavailableObserved(
+                        getClass().getSimpleName(), exception.getMessage(), responseTimeMs, coordinatorVersion));
+                }
                 logger.warn("Topology description push failed with retriable exception; will retry on next poll", exception);
             } else {
                 // Non-retriable exceptions should clear the flag and give up.
@@ -149,7 +195,8 @@ public class StreamsGroupTopologyDescriptionRequestManager implements RequestMan
             case COORDINATOR_NOT_AVAILABLE:
                 pushRequestState.onFailedAttempt(responseTimeMs);
                 logger.info("Coordinator error {} pushing topology description. Will rediscover and retry: {}", error, errorMessage);
-                coordinatorRequestManager.markCoordinatorUnknown(errorMessage, responseTimeMs);
+                pendingManagerEvents.add(new ManagerEvent.CoordinatorUnavailableObserved(
+                    getClass().getSimpleName(), errorMessage, responseTimeMs, coordinatorVersion));
                 break;
 
             case COORDINATOR_LOAD_IN_PROGRESS:
